# pointparserprocessor

./: CMakeLists.txt  data.txt  main.c
src/: main.c
src/AccelAndMagnet/: ecompass.c  ecompass.h  magnetometer.c  magnetometer.h
src/libcsv/: csv.h  libcsv.c
src/libfixmatrix/: fixarray.c  fixarray.h  fixmatrix.c  fixmatrix.h
